--- a/src/main/resources/templates/asociar-home.hbs
+++ b/src/main/resources/templates/asociar-home.hbs
@@ -11,8 +11,7 @@
     <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <script src="/js/logic.js"></script>
     <link rel="stylesheet" href="/css/estilos-home.css">
     <title>Login</title>
@@ -22,36 +21,35 @@
 <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 <div class="display-2 text-center space-evenly-horizontal">
-    <h1 >Asociar Home</h1>
+    <h1>Asociar</h1>
 </div>
 <div class="general">
-    <form action="/asocIngresoEgreso" method="post" class="form-select">
-        <br><br><br>
-        <div class="general-home">
-            <button class="btn-dark align-content-center" onclick="location.href='/asociar'">Asociar Egreso Ingres
+    <div class="">
+        <form action="/asocIngresoEgreso" method="post" class="form d-flex">
+            <button class="btn-dark align-content-center" onclick="location.href='/asociar'">Asociar Egreso Ingreso
             </button>
-        </div>
-        <div class="general-medio">
-            <h1 class="medio">Operaciones de ingreso:</h1>
-        </div>
-        <br>
+        </form>
+    </div>
+    <div class="general-medio">
+        <h1 class="medio">Operaciones de ingreso:</h1>
+    </div>
+    <br>
 
-        <div class="box-Medio">
-        </div>
-        <br><br><br>
-        <hr>
-        <div class="general-numero">
-        </div>
-        <br>
-        <div class="box-numero">
-        </div>
-        <br><br><br>
+    <div class="box-Medio">
+    </div>
+    <br><br><br>
+    <hr>
+    <div class="general-numero">
+    </div>
+    <br>
+    <div class="box-numero">
+    </div>
+    <br><br><br>
 
-        <br><br><br><br><br>
-    </form>
+    <br><br><br><br><br>
 
-    <div class="general-home">
-        <button class="boton_home btn-lig" onclick="location.href='/home'">Volver a Home</button>
+    <div class="input-row justify-content-end">
+        <button class="btn btn-dark btn-lg" onclick="location.href='/home'">Volver a Home</button>
     </div>
 </div>
 </body>
