--- a/src/main/resources/templates/asociar-egreso-ingreso.hbs
+++ b/src/main/resources/templates/asociar-egreso-ingreso.hbs
@@ -18,47 +18,42 @@
     <title>Asociar ingresos a egresos</title>
 </head>
 <body>
-<div class="titulo">
-    <h1 class="nombre-titulo">Asociar Ingresos a Egresos</h1>
-</div>
-<div class="general">
-    <form action="/asocIngresoEgreso" method="post" class="form-">
-        <br><br><br>
+<h1 class="display-4 space-around-horizontal text-center text-dark">Asociar Ingresos a Egresos</h1>
 
-        <div class="general-medio">
-
-            <h1 class="medio">Operaciones de ingreso:</h1>
-        </div>
+<div class="bg-white rounded-lg rounded container-egresos space-evenly-vert">
+    <form action="/asocIngresoEgreso" method="post" class="form">
         <br>
-        <div class="box-Medio">
+        <h1 class="display-6 space-around-horizontal text-center text-dark input-row">Operaciones de Ingreso:</h1>
+
+        <div class="container">
             {{#each ingresos}}
-                <input type="checkbox" id="cbox1" name="ingreso" value="{{id}}"> <label for="cbox2">{{id}}-{{descripcion}}</label>
-                <br><br>
+                <input type="checkbox" id="cbox1" name="ingreso" value="{{id}}"> <label for="cbox2">Nro: {{id}}     Descripcion:{{descripcion}}</label>
+                <br>
             {{/each}}
         </div>
 
-        <br><br><br>
         <hr>
+        <h1 class="display-6 space-around-horizontal text-center text-dark">     Operaciones de Egreso:     </h1>
+        <div class="container">
+            {{#each egresos}}
+                <input type="checkbox" id="cbox1" name="egreso" value="{{id}}"> <label for="cbox2">Nro: {{id}}     Descripcion:{{descripcion}}</label>
+                <br>
+            {{/each}}
+        </div>
 
-        <div class="general-numero">
-
-            <h1 class="numero">Operaciones de egreso:</h1>
+        <br><br>
+        <div class="justify-content-end d-flex">
+            <button class="btn btn-lg btn-dark rounded-pill" type="submit">Asociar</button>
         </div>
         <br>
-        <div class="box-numero">
-            {{#each egresos}}
-                <input type="checkbox" id="cbox1" name="egreso" value="{{id}}"> <label for="cbox2">{{id}}-{{descripcion}}</label>
-                <br><br>
-            {{/each}}
-        </div>
-        <br><br><br>
-        <div class="general-siguiente">
-            <button class="btn-dark align-content-center" type="submit">Asociar</button>
-        </div><br><br><br><br><br>
     </form>
-    <div class="general-home">
-        <button class="boton_home" onclick="location.href='/home'">Volver a Home</button>
-    </div>
+
 </div>
+<br>
+<div class="d-flex justify-content-center">
+    <button class="btn btn-xlg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home
+    </button>
+</div>
+<br>
 </body>
 </html>
