nueva navbar para visualizar

--- a/src/main/resources/templates/home.hbs
+++ b/src/main/resources/templates/home.hbs
@@ -29,7 +29,7 @@
         <button class="boton_asociar" onclick="location.href='asocIngresoEgreso'">
             <p class="texto-asociar">Asociar Ingresos</p>
         </button>
-        <button class="boton_visualizacion" onclick="location.href='visualizacionIngresoEgresoPorCat'">
+        <button class="boton_visualizacion" onclick="location.href='ver-ingresos'">
             <p class="texto-visualizacion">Visualizar Egresos</p>
         </button>
     </div> <br><br><br><br><br><br><br><br>
