--- a/src/main/resources/templates/visualizar-egresos.hbs
+++ b/src/main/resources/templates/visualizar-egresos.hbs
@@ -25,7 +25,7 @@
                 <br><br><br>
             </div>
             <br><br><br>
-            &emsp; &emsp;  &emsp; &emsp; <button class="boton_salir" onclick="location.href='/visualizacionIngresoEgresoPorCat'">Filtrar</button>
+            &emsp; &emsp;  &emsp; &emsp; <button class="boton_salir" onclick="location.href='/ver-ingresos'">Filtrar</button>
             <br><br>
 
             {{#each egresos}}
