--- a/src/main/resources/templates/visualizar-ingresos.hbs
+++ b/src/main/resources/templates/visualizar-ingresos.hbs
@@ -22,35 +22,82 @@
     <title>Ver Ingresos</title>
 </head>
 <body>
-<div class="d-flex justify-content-center">
-    <h1 class="text-center display-3">Visualizar Ingresos </h1>
-</div>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container-fluid">
+        <div class="space-around-horizontal navbar-nav ml-auto">
+            <a class="navbar-brand" onclick="location.href='/home'">Home</a>
+            <button type="button" class="btn btn-dark align-content-center"
+                    onclick="location.href='CrearOperacionEgreso'">Crear Operacion de Egreso
+            </button>
+            <button type="button" class="btn btn-dark align-content-center" onclick="location.href='ingreso'">
+                Cargar Operacion de Ingreso
+            </button>
 
-<div class="general-egresos rounded">
-    <div class="text-center space-evenly-vert m-4">
-
-        {{#each ingresos}}
-            <div class="space-evenly-vert padding-body-egreso">
-
-                <div class="align-content-start">
-                    <h3>Ingreso {{inc @index}} </h3>
-                </div>
-                <div class="container-body-egreso justify-content-start">
-                    <p>Nro: {{numeroOperacion}}</p>
-                    <p>Descripcion:{{descripcion}}</p>
-                    <p>Fecha: {{fechaOperacion}}</p>
-                    <p>Monto Total: {{montoTotal}}</p>
-                </div>
+            <div class="dropdown align-content-md-around">
+                <button class="btn btn-dark align-content-center dropdown-toggle" type="button" id="dropdownMenuButton"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="true">
+                    Asociar
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" onclick="location.href='/asocIngresoEgreso'">Ingreso Egreso</a></li>
+                    <li><a class="dropdown-item" href="#">Categoria Egreso</a></li>
+                    <li><a class="dropdown-item" href="#">Categoria Presupuesto</a></li>
+                </ul>
             </div>
 
-        {{else}}
-            <p> Sin ingresos.</p>
+            <div class="dropdown align-content-center">
+                <button class="btn btn-dark align-content-center dropdown-toggle" type="button" id="dropdownMenuButton"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="true">
+                    Visualizar
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" onclick="location.href='/ver-ingresos'">Ver Ingresos</a></li>
+                    <li><a class="dropdown-item" onclick="location.href='/ver-egresos'">Ver Egresos</a></li>
+                </ul>
+            </div>
+        </div>
 
-        {{/each}}
+        <div class="d-flex justify-content-end">
+            <button type="button" class="btn btn-dark" onclick="location.href='ver-bandeja'">
+                Bandeja de Entrada
+            </button>
+            <form action="/logout" method="get" class="form">
+                <button class="btn btn-dark" onclick="location.href='index-login.html'" type="submit">Salir</button>
+            </form>
+        </div>
+
 
     </div>
+</nav>
 
+<br><br>
+<div class="space-evenly-vert">
+    <div class="card text-dark bg-light mb-3 padd" style="max-width: 18rem; min-width: 24rem;">
+        <div class="card-header display-7 text-center">Ingresos</div>
+        <div class="card-body">
+            {{#each ingresos}}
+                <div class="space-evenly-vert align-items-start">
+                    {{#if @index}}
+                        <hr> {{/if}}
+                    <div class="align-content-start">
+                        <h5 class="card-title"> Ingreso {{inc @index}} </h5>
+                    </div>
+                    <div class="container-body-egreso justify-content-start">
+                        <p class="card-text">Nro: {{numeroOperacion}}</p>
+                        <p>Descripcion:{{descripcion}}</p>
+                        <p>Fecha: {{fechaOperacion}}</p>
+                        <p>Monto Total: {{montoTotal}}</p>
+                    </div>
+                </div>
+            {{else}}
+                <p> Sin ingresos.</p>
+            {{/each}}
+        </div>
+    </div>
 </div>
+
 <div class="d-flex justify-content-center padding-button-home">
     <button class="btn btn-lg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home</button>
 </div>
