--- a/src/main/resources/public/css/estilo-organizacion.css
+++ b/src/main/resources/public/css/estilo-organizacion.css
@@ -1,10 +1,22 @@
 body{
-background-image: url("https://wallpapercave.com/wp/wp6928859.png");
+background: white;
 }
 
 .titulo{
   background: none;
   text-align: center;
+}
+
+.display-7 {
+  font-size: calc(1rem + 1vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
+.container-body-egresos-ingresos {
+  padding-right: var(--bs-gutter-x, 0.75rem);
+  padding-left: var(--bs-gutter-x, 0.75rem);
+  margin-right: auto;
+  margin-left: 8px;
 }
 
 .nombre-titulo{
