--- a/src/main/resources/templates/asociar-egreso-ingreso.hbs
+++ b/src/main/resources/templates/asociar-egreso-ingreso.hbs
@@ -3,53 +3,125 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="https://kit.fontawesome.com/27517fada0.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
-    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <!-- CSS only -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+            crossorigin="anonymous"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
     <script src="/js/logic.js"></script>
     <link rel="stylesheet" href="/css/estilo-organizacion.css">
     <title>Asociar ingresos a egresos</title>
 </head>
 <body>
+
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container-fluid">
+        <div class="space-around-horizontal navbar-nav ml-auto">
+            <a class="navbar-brand" onclick="location.href='/home'">Home</a>
+            <button type="button" class="btn btn-dark align-content-center"
+                    onclick="location.href='CrearOperacionEgreso'">Crear Operacion de Egreso
+            </button>
+            <button type="button" class="btn btn-dark align-content-center" onclick="location.href='ingreso'">
+                Cargar Operacion de Ingreso
+            </button>
+
+            <div class="dropdown align-content-md-around">
+                <button class="btn btn-dark align-content-center dropdown-toggle" type="button" id="dropdownMenuButton"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="true">
+                    Asociar
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" onclick="location.href='/asocIngresoEgreso'">Ingreso Egreso</a></li>
+                    <li><a class="dropdown-item" href="#">Categoria Egreso</a></li>
+                    <li><a class="dropdown-item" href="#">Categoria Presupuesto</a></li>
+                </ul>
+            </div>
+
+            <div class="dropdown align-content-center">
+                <button class="btn btn-dark align-content-center dropdown-toggle" type="button" id="dropdownMenuButton"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="true">
+                    Visualizar
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" onclick="location.href='/ver-ingresos'">Ver Ingresos</a></li>
+                    <li><a class="dropdown-item" onclick="location.href='/ver-egresos'">Ver Egresos</a></li>
+                </ul>
+            </div>
+
+
+        </div>
+
+        <div class="d-flex justify-content-end">
+            <button type="button" class="btn btn-dark" onclick="location.href='ver-bandeja'">
+                Bandeja de Entrada
+            </button>
+            <form action="/logout" method="get" class="form">
+                <button class="btn btn-dark" onclick="location.href='index-login.html'" type="submit">Salir</button>
+            </form>
+        </div>
+
+
+    </div>
+</nav>
+
 <br>
-<h1 class="display-4 space-around-horizontal text-center text-dark">Asociar Ingresos a Egresos</h1>
 
-<div class="bg-white rounded-lg rounded container-egresos space-evenly-vert">
-    <form action="/asocIngresoEgreso" method="post" class="form">
-        <br>
-        <h1 class="display-6 space-around-horizontal text-center text-dark input-row">Operaciones de Ingreso:</h1>
-
-        <div class="container">
-            {{#each ingresos}}
-                <input type="checkbox" id="cbox1" name="ingreso" value="{{id}}"> <label for="cbox2">Nro: {{id}}     Descripcion:{{descripcion}}</label>
+<form action="/asocIngresoEgreso" method="post" class="form">
+    <div class="space-evenly-vert">
+        <div class="card text-dark bg-light mb-3 padd" style="max-width: 18rem; min-width: 24rem;">
+            <div class="card-header display-7 text-center">Asociar Ingreso Egreso</div>
+            <div class="card-body">
+                <div class="align-content-start">
+                    <h5 class="card-title"> Ingresos </h5>
+                </div>
+                <div class="container">
+                    {{#each egresos}}
+                        <div class="space-evenly-vert align-items-start " style="margin-left: 8px">
+                            <label for="cbox1">
+                                <input type="checkbox" id="cbox1" name="ingreso" value="{{id}}">
+                                Nro: {{id}} Descripcion:{{descripcion}}
+                            </label> <label
+                                for="cbox2"></label>
+                        </div>
+                    {{else}}
+                        <p> Sin egresos.</p>
+                    {{/each}}
+                </div>
                 <br>
-            {{/each}}
+                <div class="align-content-start">
+                    <h5 class="card-title"> Egresos </h5>
+                </div>
+                <div class="container">
+                    {{#each ingresos}}
+                        <div class="space-evenly-vert align-items-start" style="margin-left: 8px">
+                            <label for="cbox2">
+                                <input type="checkbox" id="cbox2" name="egreso" value="{{id}}">
+                                Nro: {{id}} Descripcion:{{descripcion}}
+                            </label>
+                        </div>
+                    {{else}}
+                        <p> Sin egresos.</p>
+                    {{/each}}
+                </div>
+            </div>
         </div>
-
-        <hr>
-        <h1 class="display-6 space-around-horizontal text-center text-dark">     Operaciones de Egreso:     </h1>
-        <div class="container">
-            {{#each egresos}}
-                <input type="checkbox" id="cbox1" name="egreso" value="{{id}}"> <label for="cbox2">Nro: {{id}}     Descripcion:{{descripcion}}</label>
-                <br>
-            {{/each}}
-        </div>
-
-        <br><br>
         <div class="justify-content-end d-flex">
             <button class="btn btn-lg btn-dark rounded-pill" type="submit">Asociar</button>
         </div>
         <br>
-    </form>
+    </div>
+</form>
 
-</div>
 <br>
 <div class="d-flex justify-content-center">
     <button class="btn btn-xlg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home
