--- a/src/main/resources/public/css/estilos-login.css
+++ b/src/main/resources/public/css/estilos-login.css
@@ -8,6 +8,7 @@ background-image: url("https://i.pinimg.com/originals/da/a6/55/daa6550f1247a7350
   align-self: center;
   align-items: center;
   margin: 0 auto;
+  max-width: 300px;
   width: 40%;
   height: 50%;
   opacity: 1.5;
