--- a/src/main/resources/templates/asociar-egreso-ingreso.hbs
+++ b/src/main/resources/templates/asociar-egreso-ingreso.hbs
@@ -57,8 +57,6 @@
                     <li><a class="dropdown-item" onclick="location.href='/ver-egresos'">Ver Egresos</a></li>
                 </ul>
             </div>
-
-
         </div>
 
         <div class="d-flex justify-content-end">
@@ -69,7 +67,6 @@
                 <button class="btn btn-dark" onclick="location.href='index-login.html'" type="submit">Salir</button>
             </form>
         </div>
-
 
     </div>
 </nav>
@@ -114,10 +111,11 @@
                     {{/each}}
                 </div>
             </div>
+            <div class="justify-content-end d-flex" style="margin: 1rem">
+                <button class="btn btn-lg btn-dark rounded-pill" type="submit">Asociar</button>
+            </div>
         </div>
-        <div class="justify-content-end d-flex">
-            <button class="btn btn-lg btn-dark rounded-pill" type="submit">Asociar</button>
-        </div>
+
         <br>
     </div>
 </form>
