--- a/src/main/resources/templates/index-seleccionar-proveedores.hbs
+++ b/src/main/resources/templates/index-seleccionar-proveedores.hbs
@@ -33,7 +33,7 @@
        <div class="box-Medio">
        <select class="opcion-multiple" name="proveedor">
            {{#each proveedores}}
-             <option value='{{nombre_apellido_razon}}'>{{nombre_apellido_razon}}</option>
+             <option value='{{nombreApellidoRazon}}'>{{nombreApellidoRazon}}</option>
            {{/each}}
        </select>
         </div>
