--- a/src/main/resources/templates/operacion.hbs
+++ b/src/main/resources/templates/operacion.hbs
@@ -42,7 +42,7 @@
 				&nbsp;&nbsp;&nbsp;Proveedor:
 				<select style=" width: 350; position: absolute; left:160px" name="proveedores">
                     {{#each proveedores}}
-                      <option value='{{id}}'>{{nombre_apellido_razon}}</option>
+                      <option value='{{id}}'>{{nombreApellidoRazon}}</option>
                     {{/each}}
                 </select>
 				<br><br>
