--- a/src/main/resources/templates/visualizar-egresos.hbs
+++ b/src/main/resources/templates/visualizar-egresos.hbs
@@ -72,32 +72,39 @@
     </div>
 </nav>
 
-<br>
-<div class="space-evenly-vert">
-    <div class="card text-dark bg-light mb-3 padd" style="max-width: 18rem; min-width: 24rem;">
-    <div class="card-header display-7 text-center">Egresos</div>
-            <div class="card-body">
-                {{#each egresos}}
-                <div class="space-evenly-vert align-items-start">
-                    <div class="align-content-start">
-                        <h5 class="card-title" style="margin-top: .5rem"> Egreso {{inc @index}} </h5>
+
+<div class="space-evenly-vert" style="align-items: stretch; overflow:auto; min-height: 80%; padding: 16px">
+
+    <div class="distribute-cards-evenly">
+
+        {{#each egresos}}
+            <div onclick="window.location='/egreso/{{id}}';">
+                <div class="card clickeable text-dark bg-light-tp mb-3"
+                     style="min-height: 16rem; min-width: 22rem; max-height: 20rem;"
+                     onclick="location.href='/egreso/{{id}}">
+                    <div class="card-header display-7 text-center"> Egreso {{inc @index}}</div>
+                    <div class="card-body">
+                        <div class="space-evenly-vert align-items-start">
+                            <div class="container-body-egreso justify-content-start" style="padding-right: 0">
+                                <p class="card-text">Nro: {{numeroOperacion}}</p>
+                                <p class="card-text">Descripcion: {{descripcion}}</p>
+                                <p class="card-text">Fecha: {{fechaOperacion}}</p>
+                                <p class="card-text">Monto Total: {{montoTotal}}</p>
+                            </div>
+                        </div>
                     </div>
-                <div class="container-body-egreso justify-content-start">
-                     <p class="card-text" style="margin-bottom: 0">Nro: {{numeroOperacion}}</p>
-                    <p class="card-text" style="margin-bottom: 0">Descripcion:{{descripcion}}</p>
-                    <p class="card-text" style="margin-bottom: 0">Fecha: {{fechaOperacion}}</p>
-                    <p class="card-text" style="margin-bottom: 0">Monto Total: {{montoTotal}}</p>
                 </div>
             </div>
-            {{else}}
+        {{else}}
             <p> Sin egresos.</p>
-            {{/each}}
-            </div>
-     </div>
+        {{/each}}
+
+    </div>
+
+    <div class="d-flex justify-content-center padding-button-home">
+        <button class="btn btn-lg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home</button>
+    </div>
 </div>
 
-<div class="d-flex justify-content-center padding-button-home">
-    <button class="btn btn-lg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home</button>
-</div>
 </body>
 </html>
