--- a/src/main/resources/templates/login.hbs
+++ b/src/main/resources/templates/login.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" >
+<html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,21 +24,24 @@
     <title>Login</title>
 </head>
 <body>
-<h1>Login</h1>
-<div class="general"><br><br>
-    <form action="/" method="post" class="form-">
-        <div class="space-evenly-vert">
-            <div align="center">
-                <img class="foto_login" src="img/login.png" alt="login">
-            </div>
-            <br>
+<h1 style="
+    padding: 16px;
+    margin-top: 44px;
+">Login</h1>
 
-            <div class="input-row">
+<div class="general space-evenly-vert" style="max-height: 400px; min-height: 340px; max-width: 360px">
+    <form action="/" method="post" class="form-">
+        <div>
+            <div class="text-center" style="margin-bottom: 16px">
+                <img class="foto_login" src="img/login.png" style="margin-top: 16px" alt="login">
+            </div>
+
+            <div class="input-row m-3">
                 <img class="m-2" src="img/usuario.png" alt="" width="5%">
                 <input name="nombreDeUsuario" placeholder="Usuario">
             </div>
 
-            <div class="input-row">
+            <div class="input-row m-3">
                 <img class="m-2" src="img/contrasenia.png" alt="" width="5%">
                 <input name="contrasenia" type="password" placeholder="Contraseña">
             </div>
