--- a/src/main/resources/templates/login.hbs
+++ b/src/main/resources/templates/login.hbs
@@ -36,7 +36,7 @@
                 <img class="foto_login" src="img/login.png" style="margin-top: 16px" alt="login">
             </div>
 
-            <div class="input-row m-3">
+            <div class="input-row m-3" style="padding-top:16px">
                 <img class="m-2" src="img/usuario.png" alt="" width="5%">
                 <input name="nombreDeUsuario" placeholder="Usuario">
             </div>
@@ -55,8 +55,7 @@
             {{#if bloqueado}}
                 <span class="textoRojo"> Usuario bloqueado, espere 5 minutos. </span>
             {{/if}}
-            <br><br>
-            <div class="general-home">
+            <div class="general-home" style="margin-top:16px">
                 <button class="texto btn btn-dark rounded-pill" type="submit"
                         onclick="location.href='index-menu-revisor.html'">Iniciar Sesión
                 </button>
