cambios EN EL TEST para que no se repita la organizacion cuando la guardas

--- a/src/main/resources/public/css/estilo-visualizar-egreso.css
+++ b/src/main/resources/public/css/estilo-visualizar-egreso.css
@@ -60,6 +60,11 @@ html{
     line-height: 1.2;
 }
 
+.display-10 {
+    font-size: calc(0.50rem + 0.75vw);
+    font-weight: 300;
+    line-height: 1.2;
+}
 .display-8 {
     font-size: calc(0.75rem + 0.75vw);
     font-weight: 300;
