--- a/src/main/resources/templates/asociar-egreso-ingreso.hbs
+++ b/src/main/resources/templates/asociar-egreso-ingreso.hbs
@@ -91,7 +91,7 @@
                                 for="cbox2"></label>
                         </div>
                     {{else}}
-                        <p> Sin egresos.</p>
+                        <p class="display-7"> Sin egresos.</p>
                     {{/each}}
                 </div>
                 <br>
@@ -107,7 +107,7 @@
                             </label>
                         </div>
                     {{else}}
-                        <p> Sin egresos.</p>
+                        <p class="display-7"> Sin egresos.</p>
                     {{/each}}
                 </div>
             </div>
