--- a/src/main/resources/templates/visualizar-egresos.hbs
+++ b/src/main/resources/templates/visualizar-egresos.hbs
@@ -96,7 +96,7 @@
                 </div>
             </div>
         {{else}}
-            <p> Sin egresos.</p>
+            <p class="display-7"> Sin egresos.</p>
         {{/each}}
 
     </div>
